Correcciones ortográficas y configurando .vscode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,14 @@
 {
-  "cSpell.words": ["comision", "fraccional"]
+  "cSpell.words": [
+    "Acordate",
+    "comision",
+    "compus",
+    "entendés",
+    "fraccional",
+    "inscripto",
+    "maxiprograma",
+    "mirá",
+    "Monotributo",
+    "Parapente"
+  ]
 }
